--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -24,3 +24,12 @@ logging:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+wx:
+  miniapp:
+    configs:
+      - appid: #微信小程序的appid
+        secret: #微信小程序的Secret
+        #token: #微信小程序消息服务器配置的token
+       # aesKey: #微信小程序消息服务器配置的EncodingAESKey
+        msgDataFormat: JSON
