--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,10 +8,10 @@
         <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.cjy</groupId>
-    <artifactId>api</artifactId>
+    <groupId>com</groupId>
+    <artifactId>ky</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api</name>
+    <name>ky</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
