--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -25,11 +25,16 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+mywx:
+  appid: wx423d4cbbe814ed74
+
 wx:
   miniapp:
     configs:
-      - appid: #微信小程序的appid
+      - appid: 123 #微信小程序的appid
         secret: #微信小程序的Secret
         #token: #微信小程序消息服务器配置的token
        # aesKey: #微信小程序消息服务器配置的EncodingAESKey
         msgDataFormat: JSON
+
+
