--- a/client/project.tt.json
+++ b/client/project.tt.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "./",
   "projectname": "client",
-  "appid": "testAppId",
+  "appid": "wx423d4cbbe814ed74",
   "setting": {
     "es6": false,
     "minified": false
