--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
 		"@tarojs/taro": "3.4.6",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
+		"taro-ui": "^2.3.4",
 		"zustand": "^4.0.0-rc.0"
 	},
 	"devDependencies": {
