--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
 		"@tarojs/taro": "3.4.6",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
+		"react-use": "^17.3.2",
 		"taro-ui": "^3.0.0-alpha",
 		"zustand": "^4.0.0-rc.0"
 	},
