--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -24,6 +24,7 @@ logging:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:mapper/*.xml
 
 mywx:
   appid: wx423d4cbbe814ed74
@@ -34,7 +35,7 @@ wx:
       - appid: 123 #微信小程序的appid
         secret: #微信小程序的Secret
         #token: #微信小程序消息服务器配置的token
-       # aesKey: #微信小程序消息服务器配置的EncodingAESKey
+        # aesKey: #微信小程序消息服务器配置的EncodingAESKey
         msgDataFormat: JSON
 
 
