基础的增删改查

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 spring:
   # 数据库配置
   datasource:
-    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://120.25.196.200:3306/Kying_debug?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&autoReconnect=true
     username: root
     password: studyhard!
